<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:gravity="center_horizontal"
    android:baselineAligned="true">
    <TextView
        android:text="@string/_estoybuscando"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:minWidth="25px"
        android:minHeight="25px"
        android:layout_marginBottom="5dp">
        <RadioGroup
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup1"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_nombre"
                android:id="@+id/radioButton1" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_parejahombre"
                android:id="@+id/radioButton2" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_trans"
                android:id="@+id/radioButton3" />
        </RadioGroup>
        <RadioGroup
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup2"
            android:layoutMode="clipBounds"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_mujer"
                android:id="@+id/radioButton4" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_parejamujer"
                android:id="@+id/radioButton5" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_parejahombremujer"
                android:id="@+id/radioButton6" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">
            <TextView
                android:text="@string/_estoybuscandoespesial"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:gravity="center_vertical" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroup3"
                android:orientation="horizontal"
                android:layout_weight="1">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/_si"
                    android:id="@+id/radioButton7" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_no"
                    android:id="@+id/radioButton8" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout4"
            android:layout_weight="1">
            <TextView
                android:text="@string/_16"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editText1"
                android:layout_weight="1"
                android:hint="YA" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout5">
            <TextView
                android:text="@string/_17"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView4"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editText2"
                android:layout_weight="1"
                android:hint="1 HORA" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout6">
            <TextView
                android:text="@string/_18"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView5"
                android:gravity="center_vertical"
                android:layout_weight="1" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editText3"
                android:layout_weight="1"
                android:hint=",,," />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>