<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TxtAddressDialogo"
        android:layout_marginBottom="5dp" />
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_si"
            android:id="@+id/RbSimDialogo"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_no"
            android:id="@+id/RbNomDialogo"
            android:layout_weight="1" />
    </RadioGroup>
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/mismaAddress"
        android:layout_margin="10dp" />
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_si"
            android:id="@+id/RbSiDmDialogo"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_no"
            android:id="@+id/RbNoDmDialogo"
            android:layout_weight="1" />
    </RadioGroup>
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ContentDialogo"
        tools:visibility="invisible">
        <TextView
            android:text="@string/_deseoServicioen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtServicioen" />
        <TextView
            android:text="@string/_referenciaservicio"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />
        <TextView
            android:text="@string/_sitiorecomendadoapp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
        <EditText
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2" />
        <CheckBox
            android:text="@string/_guadarAddressFavorita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</LinearLayout>